--- a/src/app/features/home/pages/home-page/home-page.html
+++ b/src/app/features/home/pages/home-page/home-page.html
@@ -12,3 +12,6 @@
         <app-our-favourites [products]="favourites"></app-our-favourites>
     </section>
 </div>
+<section class="collections">
+    <app-collections></app-collections>
+</section>
