feat: add global design tokens and update style variables

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,74 +4,113 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 :root {
-    --font-family: 'DM Sans', sans-serif;
-    --font-size: 1rem;
-    --font-weight: 400;
-    --letter-spacing: 0em;
-    --font-style: normal;
-    --font-optical-sizing: auto;
-    --line-height: 120%;
-    --color-text: #0e1011;
-    --background-color-toggle: #ececec;
-    --background-color-logo: #fff;
-    --stroke-color-logo: #0e1011;
-    --background-color: #fff;
-    --background-color-announcement-bar: #0e1011;
-    --color-text-announcement-bar: #fff;
-    --mask-image-announcement-bar: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 12.5%, rgb(0, 0, 0) 87.5%, rgba(0, 0, 0, 0) 100%);
-    --background-color-card-hero: #fff;
-    --color-text-card-hero-title: #0e1011;
-    --color-text-card-hero-description: #0e101199;
-    --background-color-card-hero-btn: #0e101133;
-    --background-color-hero-dots: #0e101133;
-    --background-color-hero-dot: #fff;
-    --background-color-inverted-border: radial-gradient(circle 18px at bottom right, #0000 98%, #fff) bottom right;
-    --background-color-inverted-border: radial-gradient(circle at 100% 100%, #0000 18px, transparent 18px);
-    --background-color-feature-bar: #0e1011;
-    --color-text-feature-bar-icon: #fff;
-    --background-color-our-favourites: #f6f6f6;
-    --color-text-card-product-discount: #0e101199;
-    --background-color-collections-card: #fff;
-    --background-color-collections-card-variant: #0e1011;
-    --text-color-collections-card: #0e1011;
-    --text-color-collections-card-variant: #fff;
+  --font-family: 'DM Sans', sans-serif;
+  --font-size: 1rem;
+  --font-weight: 400;
+  --letter-spacing: 0em;
+  --font-style: normal;
+  --font-optical-sizing: auto;
+  --line-height: 120%;
+  --text-color: #0e1011;
+  --background-color-toggle: #ececec;
+  --background-color-logo: #fff;
+  --stroke-color-logo: #0e1011;
+  --background-color: #fff;
+  --background-color-announcement-bar: #0e1011;
+  --text-color-announcement-bar: #fff;
+  --mask-image-announcement-bar: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 12.5%, rgb(0, 0, 0) 87.5%, rgba(0, 0, 0, 0) 100%);
+  --background-color-card-hero: #fff;
+  --title-color-card-hero: #0e1011;
+  --description-color-card-hero: #0e101199;
+  --background-color-card-hero-btn: #0e101133;
+  --background-color-hero-dots: #0e101133;
+  --background-color-hero-dot: #fff;
+  --background-color-inverted-border: radial-gradient(circle 18px at bottom right, #0000 98%, #fff) bottom right;
+  --background-color-inverted-border: radial-gradient(circle at 100% 100%, #0000 18px, transparent 18px);
+  --background-color-feature-bar: #0e1011;
+  --text-color-feature-bar-icon: #fff;
+  --background-color-our-favourites: #f6f6f6;
+  --background-color-header: #f6f6f6;
+  --text-color-card-product-discount: #0e101199;
+  --background-color-collections-card: #fff;
+  --background-color-collections-card-variant: #0e1011;
+  --text-color-collections-card: #0e1011;
+  --text-color-collections-card-variant: #fff;
+  --background-color-card: #f6f6f6;
+  --title-color-card: #0e1011;
+  --text-color-card: #0e1011;
+  --description-color-card: #0e101199;
+  --background-color-social-pill: #f6f6f6;
+  --background-color-social-pill-hover: #ededed;
+  --background-color-footer: #0e1011;
+  --text-color-footer: #fff;
+  --description-color-footer: #ffffff99;
+  --text-color-footer-link: #ffffff99;
+  --text-color-footer-link-hover: #ffffffe6;
+  --background-color-footer-btn: #fff;
+  --text-color-footer-btn: #0e1011;
+  --background-color-input: #181b1c;
+  --text-color-input: #fff;
+  --placeholder-color-input: #ffffff73;
+  --background-color-banner: #f6f6f6;
+  --title-color-banner: #0e1011;
+  --description-color-banner: #0e101199;
 }
 
 * {
-    font-family: var(--font-family);
-    font-size: var(--font-size);
-    font-weight: var(--font-weight);
-    font-style: var(--font-style);
-    font-optical-sizing: var(--font-optical-sizing);
-    line-height: var(--line-height);
-    letter-spacing: var(--letter-spacing);
+  font-family: var(--font-family);
+  font-size: var(--font-size);
+  font-weight: var(--font-weight);
+  font-style: var(--font-style);
+  font-optical-sizing: var(--font-optical-sizing);
+  line-height: var(--line-height);
+  letter-spacing: var(--letter-spacing);
 }
 
 .dark {
-    @apply bg-(--background-color);
-    --color-text: #fff;
-    --background-color-toggle: #202324;
-    --background-color-logo: #0e1011;
-    --stroke-color-logo: #fff;
-    --background-color: #0e1011;
-    --background-color-announcement-bar: #fff;
-    --color-text-announcement-bar: #0e1011;
-    --background-color-card-hero: #0e1011;
-    --color-text-card-hero-title: #fff;
-    --color-text-card-hero-description: #9f9fa0;
-    --background-color-feature-bar: #fff;
-    --color-text-feature-bar-icon: #0e1011;
-    --background-color-our-favourites: #181b1c;
-    --background-color-collections-card: #0e1011;
-    --background-color-collections-card-variant: #fff;
-    --text-color-collections-card: #fff;
-    --text-color-collections-card-variant: #0e1011;
+  --text-color: #fff;
+  --background-color-toggle: #202324;
+  --background-color-logo: #0e1011;
+  --stroke-color-logo: #fff;
+  --background-color: #0e1011;
+  --background-color-announcement-bar: #fff;
+  --text-color-announcement-bar: #0e1011;
+  --background-color-card-hero: #0e1011;
+  --title-color-card-hero: #fff;
+  --description-color-card-hero: #9f9fa0;
+  --background-color-feature-bar: #fff;
+  --text-color-feature-bar-icon: #0e1011;
+  --background-color-our-favourites: #181b1c;
+  --background-color-header: #181b1c;
+  --background-color-collections-card: #0e1011;
+  --background-color-collections-card-variant: #fff;
+  --text-color-collections-card: #fff;
+  --text-color-collections-card-variant: #0e1011;
+  --background-color-card: #181b1c;
+  --title-color-card: #fff;
+  --text-color-card: #fff;
+  --description-color-card: #9f9fa0;
+  --background-color-social-pill: #181b1c;
+  --background-color-social-pill-hover: #202324;
+  --background-color-footer: #fff;
+  --text-color-footer: #0e1011;
+  --description-color-footer: #0e101199;
+  --text-color-footer-link: #0e101199;
+  --text-color-footer-link-hover: #0e1011;
+  --background-color-footer-btn: #0e1011;
+  --text-color-footer-btn: #fff;
+  --background-color-input: #ececec;
+  --text-color-input: #0e1011;
+  --placeholder-color-input: #0e101199;
+  --background-color-banner: #181b1c;
+  --title-color-banner: #fff;
+  --description-color-banner: #9f9fa0;
 }
 
 body {
-    @apply p-3;
+  @apply p-3 bg-(--background-color);
 }
 
 svg {
-    @apply block w-full h-auto text-inherit;
+  @apply block w-full h-auto text-inherit;
 }
