feat(our-favourites): update styles

--- a/src/app/features/home/components/our-favourites/our-favourites.css
+++ b/src/app/features/home/components/our-favourites/our-favourites.css
@@ -9,7 +9,7 @@
 }
 
 .our-favourites__title {
-    @apply text-[1rem] text-(--color-text);
+    @apply text-[1rem] text-(--text-color);
 }
 
 .our-favourites__slider {
