--- a/src/app/shared/ui/product-card/product-card.css
+++ b/src/app/shared/ui/product-card/product-card.css
@@ -39,7 +39,7 @@
 .product-card__content {
     @apply absolute inset-0 flex flex-col h-full w-full;
     .product-card__title {
-        @apply absolute flex flex-row items-center p-[8px_16px_12px] w-min text-nowrap text-[0.9375rem] text-(--color-text) bg-(--background-color) rounded-br-[18px];
+        @apply absolute flex flex-row items-center p-[8px_16px_12px] w-min text-nowrap text-[0.9375rem] text-(--text-color) bg-(--background-color) rounded-br-[18px];
 
         &::before {
             @apply content-[""] absolute left-0 bottom-0 transform translate-y-full w-6 h-6 bg-transparent rounded-tl-[18px] shadow-[-8px_-8px_0_0_var(--background-color)] pointer-events-none;
@@ -54,20 +54,20 @@
         @apply absolute flex flex-row h-min -bottom-20 rounded-lg bg-(--background-color) p-5 left-3 right-3 gap-8 transition-[bottom] duration-300 ease-in-out;
 
         .product-card__price {
-            @apply flex flex-row grow shrink-0 basis-0 w-px h-min gap-2 items-center text-[0.9375rem] text-(--color-text) text-nowrap;
+            @apply flex flex-row grow shrink-0 basis-0 w-px h-min gap-2 items-center text-[0.9375rem] text-(--text-color) text-nowrap;
         }
 
         .product-card__price--old {
-            @apply text-[0.9375rem] text-(--color-text-card-product-discount) line-through decoration-1 decoration-solid decoration-(--color-text-card-product-discount) text-nowrap;
+            @apply text-[0.9375rem] text-(--text-color-card-product-discount) line-through decoration-1 decoration-solid decoration-(--text-color-card-product-discount) text-nowrap;
         }
     }
 }
 
 .product-card__icon {
-    @apply w-0 h-3.5 text-(--color-text) transition-all duration-300 ease-in-out;
+    @apply w-0 h-3.5 text-(--text-color) transition-all duration-300 ease-in-out;
 }
 
 .product-card__cta {
-    @apply text-(--color-text) text-[0.875rem] border-b-4 border-(--color-text) leading-[100%] transition-[border] duration-600 ease-in-out;
+    @apply text-(--text-color) text-[0.875rem] border-b-4 border-(--text-color) leading-[100%] transition-[border] duration-600 ease-in-out;
 }
 
