feat(home): integrate about-us and footer components and update navbar usage

--- a/src/app/features/home/pages/home-page/home-page.html
+++ b/src/app/features/home/pages/home-page/home-page.html
@@ -1,7 +1,7 @@
 <section class="home__hero">
     <app-announcement-bar></app-announcement-bar>
     <app-hero>
-        <app-navbar></app-navbar>
+        <app-navbar class="navbar--home"></app-navbar>
     </app-hero>
 </section>
 <div class="home__sections">
@@ -14,4 +14,10 @@
 </div>
 <section class="collections">
     <app-collections></app-collections>
+</section>
+<section class="about-us">
+    <app-about-us></app-about-us>
+</section>
+<section class="footer">
+    <app-footer></app-footer>
 </section>
